--- a/.github/workflows/bacis.yml
+++ b/.github/workflows/bacis.yml
@@ -22,11 +22,11 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-    - name: Testing
-      run: npm run test
+      - name: Tests
+        run: npm run test
 
-    - name: Linting
-      run: npx eslint --fix
+      - name: Linting
+        run: npx eslint --fix
 
-    - name: Building
-      run: npm run build
+      - name: Building
+        run: npm run build
