--- a/.github/workflows/bacis.yml
+++ b/.github/workflows/bacis.yml
@@ -8,11 +8,12 @@ on:
   pull_request:
     branches: [ master ]
 
-  workflow_dispatch:
-
 jobs:
   first-job:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [ 14.x ]
 
     steps:
 
@@ -22,11 +23,8 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      - name: Tests
-        run: npm run test
+      - run: npm run test
 
-      - name: Linting
-        run: npx eslint --fix
+      - run: npx eslint --fix
 
-      - name: Building
-        run: npm run build
+      - run: npm run build
