--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -17,7 +17,6 @@ jobs:
     strategy:
       matrix:
         node-version: [12.x, 14.x, 16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
@@ -27,6 +26,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm i
-    - run: npm run build --if-present
+    - run: npm run build
     - run: npm test
